# infra-doc

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  mkdocs.yml  pyproject.toml
.gitlab/: gitlab-ci.yml
docs/: index.md
docs/administrator-guide/: 1.introduction.md
docs/administrator-guide/tour/: 1.introduction.md  2.providers.md  3.servers.md
docs/user-guide/: 1.introduction.md  2.intranet.md  2.mails.md  3.mails.md
