[tool.poetry]
name = "lama-corp-doc"
version = "1.0.0"
description = "Lama Corp. Infrastructure documentation"
authors = ["Marc 'risson' Schmitt <risson@lama-corp.space>", "ddorn <diego@lama-corp.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "==1.0.4"
mkdocs-material = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
